--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.mail.username=username
 spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# swagger-ui custom path
+springdoc.swagger-ui.path=/swagger-ui.html
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
